--- a/cpu/98/style.css
+++ b/cpu/98/style.css
@@ -9,7 +9,7 @@
   }
   
   body {
-    background: #c0c0c0; /* Windows 98風の背景色 */
+    background: #c0c0c0;
     color: #000;
     display: flex;
     justify-content: center;
@@ -87,15 +87,15 @@
   
   .progress-bar {
     width: 100%;
-    margin-top: 10px;
     height: 20px;
     border-radius: 5px;
-    animation: rainbow 3s linear infinite;
     appearance: none;
+    display: none; /* 初期状態で非表示 */
   }
   
   progress::-webkit-progress-bar {
-    background: transparent;
+    background: #e0e0e0;
+    border-radius: 5px;
   }
   
   progress::-webkit-progress-value {
